--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,13 @@
 *{
     box-sizing: border-box;
+    margin: 0;
 }
 
 body{
     margin: 0;
     font-family: 'Montserrat', sans-serif;
     background-color: rgb(32, 32, 32);
+    
 }
 
 .title{
@@ -13,7 +15,7 @@ body{
     font-weight: 500;
 }
 
-.n{
+.navbar{
     background-color: rgb(32, 32, 32);
     color: white;
     display: flex;
@@ -22,31 +24,33 @@ body{
     gap: 2rem;
     padding: 0 1rem;
     height: 5rem;
+    place-items: center;
+    padding: 10px;
 }
 
-.n ul{
-    padding: 0;
-    margin: 0;
-    list-style: none;
+.navlink{
     display: flex;
-    gap: 1rem;
-    margin-right: 60px;
+    justify-content: space-evenly;
+    word-spacing: 30px;
+    margin-top: 30px;
+    margin-right: 3rem;
 }
 
-.n li:hover{
-    background-color: #777;
-}
-
-.n a{
-    color: inherit;
-    text-decoration: none;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    padding: .25rem;
+.link {
+    word-spacing: 30px;
     font-size: larger;
+    color: white;
+    text-decoration: none;
+    margin-left: 30px;
+    margin-top: 15px;
 }
 
-.n li.active{
-    background-color: #555;
+.link:hover{
+    background-color: #777;
+    border-radius: 15%;
+}
+
+.link.active{
+    background-color: #777;
+    border-radius: 15%;
 }
