--- a/src/styles.css
+++ b/src/styles.css
@@ -30,15 +30,15 @@ body{
 
 .navlink{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     word-spacing: 30px;
     margin-top: 30px;
-    margin-right: 3rem;
+    margin-right: 4rem;
 }
 
 .link {
     word-spacing: 30px;
-    font-size: larger;
+    font-size: 20px;
     color: white;
     text-decoration: none;
     margin-left: 30px;
