--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@
 body{
     margin: 0;
     font-family: 'Montserrat', sans-serif;
-    background-color: rgb(32, 32, 32);
+    background-color: rgb(41, 40, 40);
     
 }
 
@@ -25,24 +25,26 @@ body{
     padding: 0 1rem;
     height: 5rem;
     place-items: center;
-    padding: 10px;
+    padding: 20px;
 }
 
 .navlink{
-    display: flex;
+    
     justify-content: center;
-    word-spacing: 30px;
-    margin-top: 30px;
+    word-spacing: 50px;
+    margin-top: 7px;
     margin-right: 4rem;
+    margin-bottom: 40px;
 }
 
 .link {
-    word-spacing: 30px;
+    word-spacing: 40px;
     font-size: 20px;
     color: white;
     text-decoration: none;
-    margin-left: 30px;
+    margin-left: 40px;
     margin-top: 15px;
+    margin-bottom: 50px;
 }
 
 .link:hover{
@@ -50,7 +52,3 @@ body{
     border-radius: 15%;
 }
 
-.link.active{
-    background-color: #777;
-    border-radius: 15%;
-}
